@@ -84,6 +84,14 @@ def _intCmdArg(name) {
   return _intCmdArg(name, null)
 }
 
+def _strCmdArg(name, defaultValue) {
+  return project.hasProperty(name) ? project.property(name) as String : defaultValue
+}
+
+def _strCmdArg(name) {
+  return _strCmdArg(name, null)
+}
+
 def _strListCmdArg(name, defaultValue) {
   if (!project.hasProperty(name))
     return defaultValue
@@ -626,25 +634,28 @@ subprojects {
     apply plugin: 'me.champeau.jmh'
 
     jmh {
+      jmhVersion = '1.37'
       // Allows to control JMH execution directly from the command line. I typical execution may look
       // like:
-      //    gradle jmh -Pf=2 -Pwi=3 -Pi=5 -Pinclude=MyBench
+      //    gradle jmh -Pf=2 -Pwi=3 -Pi=5 -Pinclude=MyBench -PasyncProfiler=<libPath>
       // which will run 2 forks with 3 warmup iterations and 5 normal ones for each, and will only
       // run the benchmark matching 'MyBench' (a regexp).
-      warmupForks = _intCmdArg('wf')
-      warmupIterations = _intCmdArg('wi')
-      fork = _intCmdArg('f')
-      iterations = _intCmdArg('i')
-      benchmarkMode = _strListCmdArg('bm')
+      warmupForks = _intCmdArg('wf', 0)
+      warmupIterations = _intCmdArg('wi', 1)
+      fork = _intCmdArg('f', 2)
+      iterations = _intCmdArg('i', 10)
+      benchmarkMode = _strListCmdArg('bm', ['avgt'])
       includes = _strListCmdArg('include', [''])
-      humanOutputFile = project.file("${project.buildDir}/reports/jmh/results.txt")
-      resultFormat = 'JSON'
+      var asyncProfiler = _strCmdArg('asyncProfiler')
+      if (asyncProfiler != null) {
+        profilers = ['async:libPath=' + asyncProfiler + ';output=flamegraph']
+      }
       duplicateClassesStrategy = DuplicatesStrategy.WARN
+      jvmArgs = ['-XX:+EnableDynamicAgentLoading']
     }
 
     dependencies {
       jmhAnnotationProcessor(platform(project(':platform')))
-      jmh 'org.slf4j:slf4j-api'
     }
   }
 
